--- a/app_template.html
+++ b/app_template.html
@@ -86,7 +86,7 @@ html, body {
 }
 
 .card.collapsed {
-  max-height: 60px;
+  max-height: 50px;
   width: 100%;
   margin-left: 0;
   margin-right: 0;
@@ -135,7 +135,7 @@ html, body {
   </div>
   <script>
     // New: slugs is a dict of categories -> [list of card slugs]
-    /* $SLUGS_MAP */
+    SLUGS_MAP
 
     const svgBase = "https://olli.saarikivi.fi/card/";
 
